<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            style="@style/titulo_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombrevillanos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="206dp"
            android:layout_height="136dp"
            android:contentDescription="@string/superman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/luthor"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="129dp" />

        <TextView
            android:id="@+id/textView"
            style="@style/subtitulo_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luthornombre"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="102dp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/descripcion_texto"
            android:layout_width="379dp"
            android:layout_height="156dp"
            android:text="@string/luthordesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="277dp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/subtitulo_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guasonnombre"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="441dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="199dp"
            android:layout_height="135dp"
            android:contentDescription="@string/batman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/joker"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="488dp" />

        <TextView
            android:id="@+id/textView4"
            style="@style/descripcion_texto"
            android:layout_width="376dp"
            android:layout_height="107dp"
            android:text="@string/guasondesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="635dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>