<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            style="@style/titulo_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casasheroes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="206dp"
            android:layout_height="136dp"
            android:contentDescription="@string/superman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/supermancasa"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="118dp" />

        <TextView
            android:id="@+id/textView"
            style="@style/subtitulo_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supermannombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="106dp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/descripcion_texto"
            android:layout_width="127dp"
            android:layout_height="105dp"
            android:text="@string/supermancasa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="149dp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/subtitulo_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batmannombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="283dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="199dp"
            android:layout_height="135dp"
            android:contentDescription="@string/batman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/casabatman"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="283dp" />

        <TextView
            android:id="@+id/textView4"
            style="@style/descripcion_texto"
            android:layout_width="157dp"
            android:layout_height="100dp"
            android:text="@string/batmancasa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="318dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>